created the navbar

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <h1 class="logo">Tech<span>Wave</span></h1>
+        <ul class="link">
+            <li ><a class="link1"href="">About</a></li>
+            <li ><a class="link1" href="">Episodes</a></li>
+            <li ><a class="link1" href="">Host</a></li>
+        </ul>
+        <button class="button1">Subscribe <img src="./asset/ArrowRight.png"></button>
+    </nav>
+
+    
     
 </body>
 </html>
