added the banner section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
         <button class="button1">Subscribe <img src="./asset/ArrowRight.png"></button>
     </nav>
 
-    
+    <div class="banner">
+        <div class="container">
+        <div class="circle"><img src="./asset/hero-circle.png"></div>
+        <img class="mic" src="./asset/microphone.png">
+        <span id="green">NEW</span>
+        </div>
+       <h1 id="title">TechWave</h1>
+       <p id="line">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+       <div class="button">
+       <button class="button2"><img src="./asset/spotify.png">Listen on shopify</button>
+       <button class="button3"><img src="./asset/message.png">Subscribe</button>
+       </div>
+    </div>
     
 </body>
 </html>
