--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
        <button class="button3"><img src="./asset/message.png">Subscribe</button>
        </div>
     </div>
+
+    <div class="about">
+       <h1 id="about_heading">About The Podcast</h1>
+       <p class="para">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.</p>
+        <br>
+<p class="para">We break down complex topics into digestible insights, explore productivity strategies that actually work,</p>
+<p class="para">and share stories of personal growth from industry leaders.</p><br>
+
+<p class="para para1">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+<hr >
+
+<div class="boxes">
+    <div class="box">150K+<br><span class="text">MONTHLY LISTENERS</span>
+    </div>
+    <div class="box">200+<br><span class="text">EPISODES</div>
+    <div class="box">4.9★<br><span class="text">AVERAGE RATING</div>
+    <div class="box">50+<br><span class="text">INDUSTRY EXPERTS</div>
+</div>
+
+
+    </div>
     
 </body>
 </html>
