added why choose section

--- a/index.html
+++ b/index.html
@@ -51,9 +51,32 @@
     <div class="box">4.9★<br><span class="text">AVERAGE RATING</div>
     <div class="box">50+<br><span class="text">INDUSTRY EXPERTS</div>
 </div>
-
-
     </div>
+
+   
+   <div class="choose">
+    <h1 class="headline">Why Choose TechWave</h1>
+    <div class="grid">
+        
+        <div class="gridbox box1"> <img class="boximg"src="./asset/headphone.png"><br>
+        <h4 class="logotext">Premium Audio Quality</h4><br>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</div>
+
+        <div class="gridbox box2"><img class="boximg" src="./asset/device.png"><br>
+        <h4 class="logotext">Mobile Friendly</h4><br>Listen on the go with seamless mobile experience and offline downloads.</div>
+
+         <div class="gridbox box3"><img class="boximg"src="./asset/location.png"><br>
+        <h4 class="logotext">Global Community</h4><br>Connect with tech enthusiasts from over 120 countries worldwide.  </div>
+
+        <div class="gridbox box4"> <img class="boximg" src="./asset/stroke.png"><br>
+        <h4 class="logotext">Exclusive Interviews</h4><br>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies. .</div>
+
+        <div class="gridbox box5"> <img class="boximg" src="./asset/resource.png"><br>
+        <h4 class="logotext">Rich Resources</h4><br>  Access show notes, transcripts, and additional learning materials for every episode.</div>
+    </div>
+
+
+
+   </div>
     
 </body>
 </html>
