added the featured episode section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,45 @@
 
 
    </div>
+<div class="video_part">
+    <h1 class="headline">Featured Episodes</h1>
+   <div class="video_section">
+    <div class="video">
+        <div class="card">
+    <iframe src="https://www.youtube.com/embed/BYizgB2FcAQ?si=k4dN3GAL0W8mBGox" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>
+                </div>
+                <div class="text_content">
+                <h3 class="video_title">The Future of AI in Everyday Life</h3>
+                <p class="video_para">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                <div class="footer">⏱ 42 min</div>
+            </div>
+    </div>
+
+     <div class="video">
+        <div class="card">
+        <iframe  src="https://www.youtube.com/embed/bdsc3Spm6Sw?si=D16QS_tE6xhK19ex" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="text_content">
+                <h3 class="video_title">Building Better Habits</h3>
+                <p class="video_para">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                <div class="footer">⏱ 35 min</div>
+            </div>
+     </div>
+
+      <div class="video">
+        <div class="card"><iframe src="https://www.youtube.com/embed/Tuw8hxrFBH8?si=K-6nyjHIQYkQCZFM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+        <div class="text_content">
+                <h3 class="video_title">Career Growth in Tech</h3>
+                <p class="video_para">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                <div class="footer">⏱ 51 min</div>
+            </div>
+      </div>
+   </div>
+   </div>
     
 </body>
 </html>
