added challenge section and the footer part

--- a/index.html
+++ b/index.html
@@ -115,7 +115,37 @@
             </div>
       </div>
    </div>
+
+   <div class="host">
+     <h1 class="headline">Meet The Host</h1>
+     <div class="hostcard">
+        <img src="./asset/host.png">
+        <div class="info">
+        <h3 class="hostname">Alex Kumar</h3><br>
+        <p class="hostinfo">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p><br>
+        <div class="media">
+        <div class="media1"><a href="https://www.instagram.com/"><img src="./asset/instagram.png"></a></div>
+        <div class="media1"><a href="https://www.linkedin.com/"><img src="./asset/linkedin.png"></a></div>
+        <div class="media1"><a href="https://www.youtube.com/"><img  src="./asset/youtube.png"></a></div>
+        <div class="media1"><a href="https://x.com/"><img  src="./asset/x.png"></a></div>
+        </div>
+        </div>
+     </div>
    </div>
+   </div>
+
+<div class="lastpart">
+    <h1 class="logo footer_title">Tech<span>Wave</span></h1>
+    <div class="lastmedia">
+      
+        <div class="media10"><a class="media5"href="https://www.shopify.com/"><img src="./asset/spotify.png">Spotify</a></div>
+        <div class="media10"><a class="media5"href="https://www.apple.com/apple-podcasts/"><img src="./asset/apple-podcast.png">Apple Padcast</a></div>
+        <div class="media10"><a class="media5"href="https://www.youtube.com/"><img src="./asset/youtube-podcast.png">YouTube</a></div>
+        <div class="media10"><a class="media5" href="https://x.com/"><img  src="./asset/twitter.png">Twitter</a></div>
+        </div>
+   <p class="copyright"> © 2026 TechWave Podcast. All rights reserved.</p>
+</div>
+
     
 </body>
 </html>
